fix: navbar head alignment

--- a/src/Components/css/main.css
+++ b/src/Components/css/main.css
@@ -40,7 +40,6 @@ body {
 	margin-left: 1%;
 }
 .nav-head {
-	display: inline;
 	font-size: 2rem;
 	text-transform: uppercase;
 	letter-spacing: 2px;
